--- a/chocolatepecanpiebars.html
+++ b/chocolatepecanpiebars.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/3 cups all-purpose flour, (spooned & leveled)</label>
+                  <label class="form-check-label" for="flour">1 1/3 cups all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
