--- a/gfbrownies.html
+++ b/gfbrownies.html
@@ -106,103 +106,126 @@
           </button>        
         </nav>
       </header>
+  </div>
 
+  <div class="container">
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Healthier Desserts</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
-            </figcaption>
-          </figure>
+      <div class="d-sm-flex">
+        <div class="tstbite-svg order-sm-2 ms-auto">
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/meringues" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
-            </figcaption>
-          </figure>
+        <div>
+          <strong>
+            <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+            </svg>
+            <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+          </strong>
+          <h5 class="py-3 mb-0 h2">GF Brownies</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/ef.png" style="width:35px; height:35px"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnutoliveoilcake.png" class="w-100" alt="Hazelnut Olive Oil Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnutoliveoilcake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Olive Oil Cake</a>
-            </figcaption>
-          </figure>
+      <div class="d-flex flex-wrap">
+        <div class="my-2 me-4">
+          <small class="ps-1">Author: The Big Man's World</small>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/gfbrownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfbrownies.png" class="w-100" alt="GF Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfbrownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF Brownies</a>
-            </figcaption>
-          </figure>
+        <div class="my-2 me-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
+            <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
+          </svg>
+          <small>January 23rd, 2023</small>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
-            </figcaption>
-          </figure>
+      <div class="blog-detail">
+        <hr>
+        <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
+          <img src="assets/images/food/gfbrownies.png" class="w-100" >
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="Peach Pie">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
-            </figcaption>
-          </figure>
+        <br>
+        <div class="row mt-0 mt-md-5">
+          <div class="col-md-12">
+            <ul class="list-unstyled component-list tstbite-svg">
+              <li>
+                <small>Prep Time</small>
+                <span>5 minutes</span>
+              </li>
+              <li>
+                <small>Cook Time</small>
+                <span>20 minutes</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Serving</small>
+                <span>12 brownies
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-4 mt-md-5">
+              <h6>Ingredients</h6>
+              <div class="checklist pb-2">
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">1/2 cup unsweetened applesauce (substitute pumpkin puree, sweet potato puree, or mashed bananas)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2/3 cup almond butter (substitute coconut butter)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/3 cup maple syrup</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/3 cup cocoa powder</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-5">
+              <h6>Instructions</h6>
+              <ul class="instruction-list list-unstyled">
+                <li>
+                  <span>1</span>
+                  Preheat oven to 350°F and line an 8x8-inch pan with parchment paper. Set aside.
+                </li>
+                <li>
+                  <span>2</span>
+                  In a large mixing bowl, add the applesauce, almond butter, and maple syrup and whisk together until smooth. Add the coconut sugar, cocoa powder, baking soda, salt, and vanilla extract and mix until just combined.
+                </li>
+                <li>
+                  <span>3</span>
+                  Transfer the batter into the lined pan and bake for 30-35 minutes, or until a skewer comes out mostly clean.
+                </li>
+                <li>
+                  <span>4</span>
+                  Remove the brownies from the oven and let them cool completely.
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -214,7 +237,6 @@
   </footer>
 </section>
 
-<!-- Tastebite Scripts -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/html5.min.js"></script>
 <script src="assets/js/sticky.min.js"></script>
