--- a/bars.html
+++ b/bars.html
@@ -130,11 +130,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
+            <a href="/gfbrownies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfbrownies.png" class="w-100" alt="GF Brownies">
             </a>
             <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+              <a href="/gfbrownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF Brownies</a>
             </figcaption>
           </figure>
         </div>
@@ -169,6 +169,20 @@
               <a href="/chocolatepecanpiebars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Pecan Pie Bars</a>
             </figcaption>
           </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row">
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/brownies" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/brownies.jpg" class="w-100" alt="Brownies">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+              </figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </section>
