--- a/brownies.html
+++ b/brownies.html
@@ -78,7 +78,7 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                <a class="dropdown-item" href="/bars">Bars</a>
+                  <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
                 <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
@@ -122,24 +122,23 @@
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
           <h5 class="py-3 mb-0 h2">Brownies</h5>
-          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/ef.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: The Big Man's World</small>
+          <small class="ps-1">Authors: Celebrating Sweets</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 23rd, 2023</small>
+          <small>December 24th, 2024</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/brownies.png" class="w-100" >
+          <img src="assets/images/food/brownies.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -147,19 +146,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>5 minutes</span>
-              </li>
-              <li>
-                <small>Cook Time</small>
                 <span>20 minutes</span>
               </li>
               <li>
+                <small>Cook Time</small>
+                <span>26 minutes</span>
+              </li>
+              <li>
                 <small>Total Time</small>
-                <span>25 minutes</span>
+                <span>46 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>12 brownies
+                <span>12
                 </span>
               </li>
             </ul>
@@ -170,35 +169,51 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup unsweetened applesauce (substitute pumpkin puree, sweet potato puree, or mashed bananas)</label>
+                  <label class="form-check-label" for="butter">1/2 cup unsalted butter, cut into four pieces</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2/3 cup almond butter (substitute coconut butter)</label>
+                  <label class="form-check-label" for="brownsugar">1 1/4 cups light brown sugar, lightly packed</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup maple syrup</label>
+                  <label class="form-check-label" for="cocoapowder">2/3 cup unsweetened cocoa powder (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar</label>
+                  <label class="form-check-label" for="flour">2/3 cup all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup cocoa powder</label>
+                  <label class="form-check-label" for="cornstarch">1 tablespoon cornstarch</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="bakingsoda">1/8 teaspoon baking soda</label>
+                  </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="salt">1/4 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="oil">2 tablespoons avocado oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                  <label class="form-check-label" for="eggs">2 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="eggyolk">1 large egg yolk</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="chocolate">1/2 cup chocolate, chopped</label>
                 </div>
               </div>
             </div>
@@ -209,19 +224,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line an 8x8-inch pan with parchment paper. Set aside.
+                  Preheat oven to 350°F. Line an 8x8 (preferred) or 9x9 square pan with parchment paper and lightly grease it.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large mixing bowl, add the applesauce, almond butter, and maple syrup and whisk together until smooth. Add the coconut sugar, cocoa powder, baking soda, salt, and vanilla extract and mix until just combined.
+                  Place butter and brown sugar in a large microwave safe bowl. Microwave in 20 second increments, stirring between each, until the butter is completely melted. This took about 1 minute. Stir the mixture well, some of the brown sugar will begin to dissolve but not all of it. Set aside to cool for 5 minutes. Meanwhile, proceed with the dry ingredients.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer the batter into the lined pan and bake for 30-35 minutes, or until a skewer comes out mostly clean.
+                  In a separate bowl, combine cocoa powder, flour, cornstarch, baking soda, and salt. Whisk the mixture to break up any lumps. Set aside.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the brownies from the oven and let them cool completely.
+                  Whisk oil into the melted butter/sugar. Then whisk in eggs and egg yolk, followed by vanilla. Tap the whisk on the side of the bowl to remove excess batter and remove the whisk from the bowl. Sprinkle the dry ingredients over the wet ingredients and stir with a silicone spatula or wooden spoon until just a few streaks of flour remain - make sure not to overmix. Add the chocolate chips and stir until completely combined.
+                </li>
+                <li>
+                  <span>5</span>
+                  Add the batter to the prepared pan and smooth into an even layer. Bake the 9x9 pan for 19-23 minutes and the 8x8 pan for 26-30 minutes. The brownies should be removed from the oven when a toothpick inserted into the brownies come out with moist fudgy crumbs on it (no thin raw batter). Remember, there are chocolate chips in there, so melted chocolate is ok. Place the pan on a wire rack to cool completely. Store tightly covered at room temperature for up to 2 days, refrigerated for up to 4 days, or frozen for up to 3 months.
                 </li>
               </ul>
             </div>
