--- a/macandcheese.html
+++ b/macandcheese.html
@@ -181,7 +181,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1/3 cup all-purpose flour, (spooned & leveled)</label>
+                  <label class="form-check-label" for="flour">1/3 cup all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
