--- a/pumpkinpie.html
+++ b/pumpkinpie.html
@@ -170,7 +170,7 @@
                 <strong>Dough (9-inch pie crust)</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/4 cups (162g) all-purpose flour, (spooned & leveled)</label>
+                  <label class="form-check-label" for="flour">1 1/4 cups (162g) all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
